angular-app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: angular-fleet-app
  labels:
    name: angular-fleet-app
    app: webapp
    release: '0'
spec:
  containers:
  - name: angular-fleet-app
    image: richardchesterwood/k8s-fleetman-webapp-angular:release0
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"

---
apiVersion: v1
kind: Pod
metadata:
  name: angular-fleet-app-0-5
  labels:
    name: angular-fleet-app
    app: webapp
    release: 0-5
spec:
  containers:
  - name: angular-fleet-app
    image: richardchesterwood/k8s-fleetman-webapp-angular:release0-5
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
