angular-app-replicaSet.yaml

apiVersion: v1
kind: Pod
metadata:
  name: fleetman-queue
  labels:
    name: fleetman-queue
    app: queue
    release: 'release1'
spec:
  containers:
  - name: fleetman-queue
    image: richardchesterwood/k8s-fleetman-queue:release1
